--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,92 @@
+
+/* Styling The Body */
+body {
+  text-align: center;
+   background-image: url("images/drums.jpg");
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+  background-size: cover;
+}
+
+footer {
+  color: #fff;
+  font-family: sans-serif;
+
+}
+
+/* Headings */
 h1 {
+  font-size: 5rem;
+  color: #ffbe0f;
+  font-family: 'Akaya Telivigala', cursive;
+}
+h3{
+  font-family: 'Pacifico', cursive;
+  font-size: 3.5rem;
+}
+
+/* Adding Images to Buttons */
+.w {
+  background-image: url("images/tom1.png");
+}
+
+.a {
+  background-image: url("images/tom2.png");
+}
+
+.s {
+  background-image: url("images/tom3.png");
+}
+
+.d {
+  background-image: url("images/tom4.png");
+}
+
+.j {
+  background-image: url("images/crash.png");
+}
+
+.k {
+  background-image: url("images/kick.png");
+}
+
+.l {
+  background-image: url("images/snare.png");
+}
+
+.set {
+  margin: 10% auto;
+}
+
+.game-over {
+  background-color: red;
+  opacity: 0.8;
+}
+
+.pressed {
+  box-shadow: 0 3px 4px 0 #DBEDF3;
+  opacity: 0.5;
+}
+
+.red {
   color: red;
 }
-.huge{
-  color : yellow;
-  font-size: 10rem;
+
+/* Styling Buttons */
+.drum {
+  outline: none;
+  border: 10px solid #404B69;
+  font-size: 5rem;
+  font-family: 'Arvo', cursive;
+  line-height: 2;
+  font-weight: 900;
+  color: #DA0463;
+  text-shadow: 3px 0 #DBEDF3;
+  border-radius: 15px;
+  display: inline-block;
+  width: 150px;
+  height: 150px;
+  text-align: center;
+  margin: 10px;
+  background-color: white;
 }
